# oarepo-workflows

./: .copyright.tmpl  .coveragerc  .gitignore  .mypy.ini  .ruff.toml  MANIFEST.in  README.md  annotations.json  format.sh  oarepo.yaml  pyproject.toml  ruff.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: build.yaml  push.yaml
oarepo_workflows/: __init__.py  base.py  errors.py  ext.py  ext_config.py  initial_config.py  proxies.py  utils.py
oarepo_workflows/model/presets/: __init__.py
oarepo_workflows/model/presets/records/: draft_record.py  parent_record.py  parent_record_metadata.py  record.py  workflows_mapping.py
oarepo_workflows/model/presets/services/records/: parent_record_schema.py  permission_policy.py  record_schema.py  service_config.py
oarepo_workflows/notifications/: __init__.py  generator.py  resolvers.py
oarepo_workflows/permissions/: generators.py  policy.py
oarepo_workflows/records/: models.py
oarepo_workflows/records/systemfields/: state.py  workflow.py
oarepo_workflows/requests/: __init__.py  classes.py  events.py  generators.py  permissions.py  policy.py  requests.py
oarepo_workflows/requests/generators/: __init__.py  auto.py  conditionals.py  multiple_entities.py  recipient_generator.py  record_owners.py  workflow_based.py
oarepo_workflows/resolvers/action/: __init__.py
oarepo_workflows/resolvers/auto_approve/: __init__.py
oarepo_workflows/resolvers/multiple_entities/: __init__.py
oarepo_workflows/services/: results.py  uow.py
oarepo_workflows/services/action/: __init__.py
oarepo_workflows/services/auto_approve/: __init__.py
oarepo_workflows/services/components/: __init__.py  workflow.py
oarepo_workflows/services/multiple_entities/: __init__.py
oarepo_workflows/services/permissions/: __init__.py  composite.py  generators.py  identity.py  policy.py  record_permission_policy.py  workflow_permissions.py
oarepo_workflows/services/records/: __init__.py  schema.py
oarepo_workflows/views/: __init__.py  api.py  app.py
tests/: __init__.py  conftest.py  entrypoints.py  test_action_resolver.py  test_auto_approve.py  test_auto_request.py  test_composite.py  test_conditional_generators.py  test_multiple_recipients.py  test_permission_generators.py  test_workflow.py  test_workflow_field.py  test_workflow_permission.py  test_workflow_requests.py  thesis.yaml  utils.py
