[project]
name = "oarepo-workflows"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ronald Krist", email = "krist@cesnet.cz" }
]
requires-python = ">=3.13,<3.14"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "oarepo-runtime",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
oarepo13 = [
    # "oarepo[rdm,tests]>=13.0.0",
    "invenio-records-resources[tests,opensearch2]",
    "invenio-drafts-resources[tests,opensearch2]",
    "invenio-rdm-records[tests,opensearch2]",
    "invenio-previewer",
    "invenio-app-rdm",
    "invenio-requests",
]
tests = [
    "pytest-invenio",
    "pytest-oarepo",
]


[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true