[project]
name = "oarepo-workflows"
version = "2.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ronald Krist", email = "krist@cesnet.cz" }
]
requires-python = ">=3.13,<3.14"

dependencies = [
    "oarepo-runtime>=2.0.0dev5,<3.0.0",
    "graphlib",
    "oarepo[rdm,tests]>=13.0.0,<14.0.0",
    "oarepo-model<=0.1.0.dev3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "types-PyYAML",
]

tests = [
    "pytest-invenio",
    "pytest-oarepo",
]

[project.entry-points."invenio_base.apps"]
oarepo_workflows = "oarepo_workflows.ext:OARepoWorkflows"
[project.entry-points."invenio_base.api_apps"]
oarepo_workflows = "oarepo_workflows.ext:OARepoWorkflows"
[project.entry-points."invenio_requests.entity_resolvers"]
auto_approve = "oarepo_workflows.resolvers.auto_approve:AutoApproveResolver"
multiple = "oarepo_workflows.resolvers.multiple_entities:MultipleEntitiesResolver"
[project.entry-points."invenio_base.finalize_app"]
oarepo_workflows = "oarepo_workflows.ext:finalize_app"
[project.entry-points."invenio_base.api_finalize_app"]
oarepo_workflows = "oarepo_workflows.ext:finalize_app"
[project.entry-points."invenio_base.api_blueprints"]
oarepo_workflows = "oarepo_workflows.views.api:create_api_blueprint"
[project.entry-points."invenio_base.blueprints"]
oarepo_workflows = "oarepo_workflows.views.app:create_app_blueprint"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true
