[project]
name = "oarepo-workflows"
version = "4.0.1"
description = "OARepo module allowing record workflow functionality"
readme = "README.md"
authors = [
    { name = "Ronald Krist", email = "krist@cesnet.cz" }
]
requires-python = ">=3.14,<3.15"

dependencies = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
    "oarepo-model>=2.0.0,<3.0.0",
    "oarepo-runtime>=4.0.0,<5.0.0",

    # invenio
    "invenio-rdm-records>=28.2.0,<29.0.0",
    "invenio-search>=3.1.2,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-workflows"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "types-PyYAML",
    "oarepo-invenio-typing-stubs",
]

tests = [
    "oarepo-rdm>=3.0.0,<4.0.0",

    # invenio dependencies
    "pytest-invenio>=4.0.0,<5.0.0",
]

oarepo14 = [
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
]

[project.entry-points."invenio_base.apps"]
oarepo_workflows = "oarepo_workflows.ext:OARepoWorkflows"
[project.entry-points."invenio_base.api_apps"]
oarepo_workflows = "oarepo_workflows.ext:OARepoWorkflows"
[project.entry-points."invenio_requests.entity_resolvers"]
auto_approve = "oarepo_workflows.resolvers.auto_approve:AutoApproveResolver"
multiple = "oarepo_workflows.resolvers.multiple_entities:MultipleEntitiesResolver"
[project.entry-points."invenio_base.finalize_app"]
oarepo_workflows = "oarepo_workflows.ext:finalize_app"
[project.entry-points."invenio_base.api_finalize_app"]
oarepo_workflows = "oarepo_workflows.ext:finalize_app"
[project.entry-points."invenio_config.module"]
oarepo_workflows = "oarepo_workflows.initial_config"

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/oarepo_workflows",
]
